--- a/bsns_home.html
+++ b/bsns_home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrimeShip</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/cust_about.css">
+    <link rel="stylesheet" href="css/bsns_home.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
@@ -36,7 +36,11 @@
         </nav>
     </div>
     <div id="wrap">
-        <p><p>Lorem ipsum dolor sit amet. Et galisum galisum non sapiente tempore eum autem dolores. Id blanditiis aliquid et nihil ullam rem perferendis harum sit esse fugiat  enim nostrum ut eligendi enim qui placeat voluptates. Sed enim iste et saepe eligendi et exercitationem molestiae et magnam quod ut quaerat officiis. </p><p>Ad aperiam iusto qui nulla aspernatur est eius ipsam. Aut repellat provident qui adipisci magnam aut totam quas vel autem Quis et perferendis maiores aut nulla molestias eum consequatur facilis. </p><p>Est debitis eius aut consectetur Quis rem quos facere non quas officia ut deleniti ullam qui temporibus nobis ut temporibus enim. Est inventore sequi quo omnis porro sed dolor saepe vel quam amet et placeat provident quo inventore maxime! </p>
+        <p>Add new product to the database.</p>
+        <form action="" method="get" id="add_product">
+            <input type="text" placeholder="Product Name" id="pname"><br>
+            <input type="submit" name="Submit" id="sub" style="width: 250px;  background: #00ab66; color: white; text-align: center; cursor: pointer;">
+        </form>
     </p>
     </div>
 
